klug servicios: cambios en ot y formato de sale  order

--- a/custom_bi_car_repair/report/car_diagnosys.xml
+++ b/custom_bi_car_repair/report/car_diagnosys.xml
@@ -21,16 +21,13 @@
 
         </record>
 
-<<<<<<< HEAD
-=======
         
 
->>>>>>> origin/klug
 		<template id="maintenance_template_view">
 			<t t-call="web.external_layout">
                 <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})"/>
                 
-				<div class="page">
+				<div class="page" style="margin-top:0px;">
                     <div class="row">
                         <div class="col-8" style="font-size:18px;">
                             <strong>LIQUIDACION ORDEN DE TRABAJO # <span t-field="o.name" /></strong> 
@@ -38,93 +35,80 @@
                     </div>
                     <br/>
                    <div class="row">
-<<<<<<< HEAD
-                    <div class="col-8" >
-=======
                     <div class="col-4" >
->>>>>>> origin/klug
                        <strong><i class="fa fa-user" aria-hidden="true"></i> Cliente</strong>
                        <br/>
-                       Empresa: <span t-field="o.partner_id.name" />
+                       <strong>Empresa: </strong> <span t-field="o.partner_id.name" />
                        <br/>
-                       RUT: <span t-field="o.partner_id.vat" />
+                       <strong> RUT: </strong> <span t-field="o.partner_id.vat" />
                        <br/>
-                       Telefono: <span t-field="o.partner_id.phone0" />
+                       <strong> Telefono:</strong> <span t-field="o.partner_id.phone0" />
                        <br/>
-                       Direccion: <span t-field="o.partner_id.street" />
+                       <strong> Direccion:</strong> <span t-field="o.partner_id.street" />
                        <br/>
-                       Lugar de reparación: <span t-field="o.street" />
+                       <strong>Lugar de reparación:</strong> <span t-field="o.street" />
                     </div>
-<<<<<<< HEAD
-                    <div class="col-4">
-
-=======
                     <div class="col-4" style="text-align:right;">
                         <img t-if="o.image_brand" t-att-src="image_data_uri(o.image_brand)" style="max-height: 45px;" alt="logo_brand" />
                     </div>
                     <div class="col-4">
                         
->>>>>>> origin/klug
                         <strong>
-                            <i class="fa fa-car" aria-hidden="true"></i>    Vehículo
+                          <i class="fa fa-car" aria-hidden="true"></i>
+                          Vehículo
                         </strong>
                         <br/>
                         <span t-field="o.model" /> <span t-field="o.brand" /> <span t-field="o.year" />
                         <br/>
-                        Matricula: <span t-field="o.license_plate" />
+                        <strong>Matricula:</strong> <span t-field="o.license_plate" />
                         <br/>
-                        Color: <span t-field="o.color" />
+                        <strong> Color: </strong> <span t-field="o.color" />
                         <br/>
                         <t t-if="o.odometer">
-                            Kilometraje: <span t-field="o.odometer" />
+                          <strong> Kilometraje: </strong> <span t-field="o.odometer" />
                         </t>
                         <br/>
-                        Fecha Creación Orden: <span t-field="o.request_date" />
-                        <br/>
-<<<<<<< HEAD
-                        Fecha Liquidación: <span t-field="o.close_date" />
-=======
-                        Fecha Liquidación: <span t-esc="o.close_date.strftime('%d/%m/%Y')"/>
->>>>>>> origin/klug
-                        
-
-
+                        <strong> Fecha Creación Orden: </strong> <span t-field="o.request_date" />
+						            <br/>
+            						<t t-if="o.close_date">
+                          <strong>Fecha Liquidación: </strong> <span t-esc="o.close_date.strftime('%d/%m/%Y')"/>
+                      </t>
+                      <br/>
+                      <t t-if="o.user_id">
+                        <strong> Técnico Asignado: </strong> <span t-esc="o.user_id.name"/>
+                      </t>
                     </div>
                    </div>
                    <br/>
                    <div class="row">
-                    <div class="col-12">
+                     <div class="col-12">
+                       <t t-if="o.description">
                         <i class="fa fa-wrench" aria-hidden="true"></i>
                         <strong>Diagnóstico:</strong> <span t-field="o.description" />
                         <br/>
+
+                        </t>
+  
+                       <t t-if="o.observations">
                         <i class="fa fa-heartbeat" aria-hidden="true"></i>
                         <strong>Observaciones:</strong> <span t-raw="o.observations"/>
-
+                      </t>
                     </div>
                     
                    </div>
                    <br/>
                    <br/>
                    <div class="row">
-<<<<<<< HEAD
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr style="border-bottom: solid 1px;">
-=======
                     <table class="table table-borderless" style="max-height:14px;">
                         <thead>
                         <tr style="border-bottom: solid 1px;max-height:14px;">
->>>>>>> origin/klug
                             <th>
                                 Servicios Realizados
                             </th>
                             <th>
   
                             </th>
-<<<<<<< HEAD
-=======
                             <th></th>
->>>>>>> origin/klug
                             <th>
                                 <span t-field="o.total_price_services"/>
                             </th>
@@ -133,17 +117,6 @@
                         <tbody>
                             <t t-foreach="o.maintenance_line_services" t-as="line">
                                 <tr style="text-align:left;">
-<<<<<<< HEAD
-                                    <td style="width:25%;">
-                                        <span t-field="line.description"/>
-                                    </td>
-                                    <td style="width:25%;">
-                                        <span t-field="line.quantity"/> 
-                                    </td>
-                                    <td style="width:25%;">
-                                        $ <span t-field="line.price"/>
-                                    </td>
-=======
                                     <td style="width:25%;padding:0px;">
                                         <span t-field="line.description"/>
                                     </td>
@@ -156,7 +129,6 @@
                                     <td style="width:25%;padding:0px;">
                                         $ <span t-field="line.total_subtotal_line_services"/>
                                     </td>
->>>>>>> origin/klug
                                 </tr>
                                 
 
@@ -173,10 +145,7 @@
                                 Repuestos Utilizados
                             </th>
                             <th></th>
-<<<<<<< HEAD
-=======
                             <th></th>
->>>>>>> origin/klug
                             <th><span t-field="o.total_price_products"/></th>
                            
                             
@@ -185,17 +154,6 @@
                         <tbody>
                             <t t-foreach="o.maintenance_line_products" t-as="lines">
                                 <tr style="text-align:left;">
-<<<<<<< HEAD
-                                    <td style="width:25%;">
-                                        <span t-field="lines.description"/>
-                                    </td>
-                                    <td style="width:25%;">
-                                        <span t-field="lines.quantity"/>
-                                    </td>
-                                    <td style="width:25%;">
-                                       $ <span t-field="lines.price"/>
-                                    </td>
-=======
                                     <td style="width:25%;padding:0px;">
                                         <span t-field="lines.description"/>
                                     </td>
@@ -208,7 +166,6 @@
                                     <td style="width:25%;padding:0px;">
                                       $  <span t-field="lines.total_subtotal_line_product"/>
                                     </td>
->>>>>>> origin/klug
                                 </tr>
 
                             </t>
@@ -218,29 +175,7 @@
                     
                    </div>
                    <br/>
-                   <div class="row">
-<<<<<<< HEAD
-                    <table class="table table-borderless">
-                        <thead>
-                        <tr style="border-top: solid 1px;">
-                            <th>
-                                Subtotal<br/>
-                                <span t-field="o.total_neto"/>
-                            </th>
-                            <th>
-                                Iva 19% <br/>
-                                <span t-field="o.total_tax"/>
-                            </th>
-                            <th>
-                                Total <br/>
-                                <span t-field="o.total_tax_incluide"/>
-                            </th>
-                           
-                            
-                        </tr>
-                        </thead>
-                    </table>
-=======
+                   <div class="row" style="margin-top:50px;">
                    
                     <div class="col-6"></div>
                    <div class="col-6" style="text-align:right;">
@@ -276,7 +211,6 @@
                            
                             
                         
->>>>>>> origin/klug
                    </div>
                    <br/>
                    <br/>
@@ -285,10 +219,10 @@
                    
                 
                 </div>
-                <div class="footer">
-                    <footer>
+                <div class="firmas" style="margin-top:50px;">
+                    
                         <div class="row">
-                            <div class="firma" style="text-align:justify; font-size:16px;margin-left:50px;">
+                            <div class="firma" style="text-align:justify; font-size:12px;margin-left:50px;">
                                 <div class="texto_firma" style="border-bottom: 1px solid #000; width:300px;">
         
                                 </div>
@@ -315,7 +249,6 @@
         
                             </div>
                         </div>
-                       </footer>
                 </div>
             </t>
         </template>
