--- a/custom_bi_car_repair/report/sale_order.xml
+++ b/custom_bi_car_repair/report/sale_order.xml
@@ -36,7 +36,8 @@
                        
                      </div>
           <div class="col-4" style="margin-left:200px;">
-            <strong>
+              <t t-if="doc.fleet">
+              <strong>
                           <i class="fa fa-car" aria-hidden="true"></i>
                           Vehículo
                         </strong>
@@ -48,7 +49,7 @@
                         
                         
                         
-                                            
+                    </t>                               
           </div>
         
         </div>
