--- a/custom_fleet/views/fleet_view.xml
+++ b/custom_fleet/views/fleet_view.xml
@@ -19,22 +19,26 @@
 
                     
                 </xpath>
-                <xpath expr="//field[@name='marca']" position="attributes">
+                <xpath expr="//field[@name='model_year']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
-                <xpath expr="//field[@name='modelo']" position="attributes">
+                <xpath expr="//field[@name='transmission']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
-                    <xpath expr="//field[@name='patente']" position="attributes">
-                    <attribute name="invisible">1</attribute>
-                    </xpath>
-                    <xpath expr="//field[@name='combustible']" position="attributes">
-                    <attribute name="invisible">1</attribute>
-                    </xpath>
-                    <xpath expr="//field[@name='anio']" position="attributes">
+                <xpath expr="//field[@name='color']" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
-                <xpath expr="//field[@name='tipo_vehiculo']" position="after">
+                <xpath expr="//field[@name='seats']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='doors']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//field[@name='trailer_hook']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+                <xpath expr="//field[@name='model_year']" position="after">
                     <field name="traccion_vehicle" string="Tracción"/>
                     <field name="accesories_vehicle" string="Accesorios" widget="many2many_tags"/>
                 </xpath>
