--- a/custom_agreement_blueminds/views/agreement_view.xml
+++ b/custom_agreement_blueminds/views/agreement_view.xml
@@ -8,8 +8,8 @@
             <field name="inherit_id" ref="agreement_blueminds.contract_line_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='km_mes']" position="after">
-                    <field name="deducible"/>
-                    <field name="deducible_robo"/>
+                    <!-- <field name="deducible"/>
+                    <field name="deducible_robo"/> -->
                 </xpath>
                 <xpath expr="//field[@name='maintenance']" position="attributes">
                     <attribute name="string" >Frecuencia de mantencion</attribute>
@@ -30,14 +30,61 @@
             <field name="model">agreement</field>
             <field name="inherit_id" ref="agreement_blueminds.agreement_form"/>
             <field name="arch" type="xml">
-                
+                <xpath expr="//header" position="inside">
+                    <button string="Crear Orden de Venta" type="object" name="agree_sale" class="oe_highlight"/>
+                </xpath>
                 <xpath expr="//field[@name='partner_invoice_id']" position="attributes">
                     <attribute name="required">0</attribute>
                 </xpath> 
                 <xpath expr="//field[@name='type_contrib_partner']" position="attributes">
                     <attribute name="attrs">{'invisible': [('is_template', '!=', False)]}</attribute>
                 </xpath>
-                
+                <xpath expr="//page[@name='documents']" position="after">
+                    <page name="vehicle" string="Datos Vehiculo">
+                        <group>
+                            <group name="data_vehicle" string="Datos vehiculo">
+                                <field name="vehicle_id" string="Vehiculo"/>
+                                <field name="product_id" string="Producto"/>
+                                <field name="place_contract" string="Plazo Contrato(Meses)"/>
+                                
+                                <field name="km_mes" string="Kilometros Mensuales Contratados"/>
+                                <field name="warranty" string="Forma de Pago Garantia"/>
+                                <field name="deducible" string="Deducible"/>
+                                <field name="deducible_robo" string="Deducible Robo"/>
+                            </group>
+                            <group string="Datos vehiculo">
+                                <field name="fecha_inicio"/>
+                                <field name="fecha_fin"/>
+                                <field name="price"/>
+                                <field name="price_km_adi"/>
+                                <field name="price_instalacion"/>
+                            </group>
+                            
+                        </group>
+                        
+                    </page>
+                    <page name="vehicle_entrega" string="Datos Entrega">
+                        <group>
+                            <group>
+                                <field name="km_salida"/>
+                                <field name="estanque_salida"/> 
+                            </group>
+                             
+                        </group>
+                        
+                        
+                    </page>
+                    <page name="vehicle_devolucion" string="Datos devolucion">
+                        <group>
+                            <group>
+                                <field name="km_devo"/>
+                                <field name="estanque_devo"/>
+                            </group>
+                            
+                        </group>
+                        
+                    </page>
+                </xpath>
             </field>
         </record>
         
